# cook-county-medical-center-scraping

./: README.md  geocode.py  pyproject.toml
medicalfacilities/: scrapy.cfg
medicalfacilities/medicalfacilities/: items.py  middlewares.py  pipelines.py  settings.py
medicalfacilities/medicalfacilities/spiders/: chicago_university.py  cook-county.py  fetch-cook-county-urls.py
tests/: test_chicago_med_facilities.py
