[tool.poetry]
name = "chicago-med-facilities"
version = "0.1.0"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"
arcgis = "^1.9.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.10b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
rich = "^10.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
